--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/Avenir-otf/AvenirNextLTPro-Regular.otf")
+  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Regular.otf")
       format("otf"),
-    url("../assets/fonts/Avenir-ttf/AvenirNextLTPro-Regular.ttf") format("ttf"),
-    url("../assets/fonts/Avenir-woff/AvenirNextLTPro-Regular.woff")
+    url("../../assets/fonts/Avenir-ttf/AvenirNextLTPro.ttf") format("ttf"),
+    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Regular.woff")
       format("woff"),
-    url("../assets/fonts/Avenir-woff2/AvenirNextLTPro-Regular.woff2")
+    url("../../assets/fonts/Avenir-woff2/AvenirNextLTPro-Regular.woff2")
       format("woff2");
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/Avenir-otf/AvenirNextLTPro-Demi.otf") format("otf"),
-    url("../assets/fonts/Avenir-ttf/AvenirNextLTPro-Demi.ttf") format("ttf"),
-    url("../assets/fonts/Avenir-woff/AvenirNextLTPro-Demi.woff") format("woff"),
-    url("../assets/fonts/Avenir-woff2/AvenirNextLTPro-Demi.woff2")
+  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Demi.otf") format("otf"),
+    url("../../assets/fonts/Avenir-ttf/AvenirNextLTProDemi.ttf") format("ttf"),
+    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Demi.woff") format("woff"),
+    url("../../assets/fonts/Avenir-woff2/AvenirNextLTPro-Demi.woff2")
       format("woff2");
   font-weight: 600;
 }
 
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/Avenir-otf/AvenirNextLTPro-Bold.otf") format("otf"),
-    url("../assets/fonts/Avenir-ttf/AvenirNextLTPro-Bold.ttf") format("ttf"),
-    url("../assets/fonts/Avenir-woff/AvenirNextLTPro-Bold.woff") format("woff"),
-    url("../assets/fonts/Avenir-woff2/AvenirNextLTPro-Bold.woff2")
+  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Bold.otf") format("otf"),
+    url("../../assets/fonts/Avenir-ttf/AvenirNextLTProBold.ttf") format("ttf"),
+    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Bold.woff") format("woff"),
+    url("../../assets/fonts/Avenir-woff2/AvenirNextLTPro-Bold.woff2")
       format("woff2");
   font-weight: 700;
 }
