adds initial styles for header in tablet

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,10 +2,12 @@ $main-dk: #323232;
 $main-dk-opacity: #32323280;
 $main-med: #afafaf;
 $main-lt: #fff;
+$main-accent: #0095ff;
 
 $sec-dk: #000;
 $sec-med: #e1e1e1;
 $sec-lt: #fafafa;
+$sec-accent: #0065ad;
 
 $fw-reg: 300;
 $fw-bold: 600;
