--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,34 +1,32 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/typography" as *;
+@use "../../styles/partials/variables" as *;
 
 .header__button--upload {
   width: 100%;
   height: 2.5rem;
-  border: none;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  border: 1px solid $main-accent;
   border-radius: 4px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #0095ff;
-  background-image: url("../../assets/images/icons/upload.svg");
-  background-repeat: no-repeat;
-  background-size: 1rem;
-  background-position: 1rem;
+  background: $main-accent url("../../assets/images/icons/upload.svg") 0.5rem no-repeat;
+  background-size: 1.3rem;
   cursor: pointer;
-  background-image: url("../../assets/images/icons/publish.svg");
+  vertical-align: middle;
+  font-weight: 600;
 
   @include tablet {
     width: 150px;
     padding: 0 2rem;
+    background-size: 1.4rem;
+    height: 2.5rem;
   }
 
   &:hover {
-    background-color: #0065ad;
-  }
-
-  &--header {
-    @include tablet {
-      width: 150px;
-    }
+    background-color: $sec-accent;
+    border: 1px solid $sec-accent;
   }
 }
