--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,9 +7,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 60vw;
+    padding: 1rem;
+    max-height: 20vh;
 
     @include tablet {
       flex-direction: row;
+      padding: 1rem 2.25rem;
+      justify-content: space-between;
+      align-items: center;
+      height: 75px;
+      background-color: pink;
     }
 
     @include desktop {
@@ -20,58 +28,87 @@
 
   &__logo {
     margin-bottom: 1rem;
+    max-height: 25px;
+
 
     @include tablet {
-      padding-top: 0.4rem;
-      margin-bottom: 0;
-      margin-right: auto;
+      height: 80px;
+      margin: 0;
+
+
+
     }
   }
 
   &__wrapper {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     width: 100%;
     margin-bottom: 1rem;
 
     @include tablet {
-      width: 270px;
+      flex-direction: row;
+      width: 70vw;
       margin-bottom: 0;
       margin-right: 1.5rem;
     }
   }
 
-  &__input {
+  &__search {
     width: 100%;
-    height: 2rem;
-    padding: 1rem;
-    background-image: url("../../assets/images/icons/search.svg");
+    height: 2.5rem;
+    padding: 1rem 2.25rem;
+    background: $sec-lt url("../../assets/images/icons/search.svg") 0.75rem no-repeat;
     background-size: 1rem;
-    background-position: 1rem;
-    background-repeat: no-repeat;
+    color: $sec-dk;
+    font-weight: 400;
+    border: 1px solid $sec-med;
+    border-radius: 4px;
+    margin-right: 0.75rem;
+    font-size: 0.7rem;
 
     @include tablet {
-      padding: 1.5rem 2.25rem;
+      padding: 1rem 2.25rem;
+      width: 240px;
     }
 
     @include desktop {
       padding: 1.5rem 5rem;
     }
+
+    &-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__avatar {
-    margin-top: 1rem;
     border-radius: 50%;
-    margin-right: 1rem;
     width: 2.25rem;
     height: 2.25rem;
-    border-bottom: 1px solid $sec-med;
     object-fit: cover;
+    object-position: 20% 50%;
     background-color: $sec-med;
 
     @include tablet {
-      width: 3rem;
-      height: 3rem;
+      display: none;
     }
+
+    &--tablet {
+      border-radius: 50%;
+      width: 2.75rem;
+      height: 2.75rem;
+      object-fit: cover;
+      object-position: 20% 50%;
+      background-color: $sec-med;
+
+    }
+  }
+
+  &__button-container {
+    display: flex;
+
   }
 }
