--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -8,9 +8,9 @@
 
 :root {
   font-size: $fs-root;
-  color: $main-dk;
+  color: $bf-black;
   font-family: "Avenir", sans-serif;
-  background-color: $main-lt;
+  background-color: $white;
 }
 
 body {
