--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,36 +1,12 @@
-$main-dk: #323232;
-$main-dk-opacity: #32323280;
-$main-med: #afafaf;
-$main-lt: #fff;
-$main-accent: #0095ff;
+$bf-black: #323232;
+$bf-black-opacity: #32323280;
+$silver: #afafaf;
+$white: #fff;
+$bf-blue: #0095ff;
 
-$sec-dk: #000;
-$sec-med: #e1e1e1;
-$sec-lt: #fafafa;
-$sec-accent: #0065ad;
-
-$fw-reg: 300;
-$fw-bold: 600;
-$fw-bolder: 700;
-
-$fs-xxl: 3.75rem;
-$fs-xl: 2.25rem;
-$fs-lg: 1.5rem;
-$fs-med: 0.875rem;
-$fs-sm: 0.75rem;
-
-$fs-mob-xl: 2.25rem;
-$fs-mob-lg: 1.5rem;
-$fs-mob-med: 1.25rem;
-$fs-mob-sm-med: 0.9rem;
-$fs-mob-sm: 0.8125rem;
-$fs-mob-xs: 0.625rem;
+$bf-dk-black: #000;
+$mercury: #e1e1e1;
+$alabaster: #fafafa;
+$bf-dk-blue: #0065ad;
 
 $fs-root: 16px;
-
-$lh-xxl: 4.25rem;
-$lh-xl: 2.75rem;
-$lh-lg: 2rem;
-$lh-med: 1.375rem;
-$lh-sm: 1.25rem;
-$lh-xs: 1.125rem;
