--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,27 +6,26 @@
 .header__button--upload {
   width: 100%;
   height: 2.5rem;
-  line-height: 1.5;
-  padding: 0.375rem 0.75rem;
-  border: 1px solid $main-accent;
+  padding: 0.3rem 0.75rem;
+  border: 1px solid $bf-blue;
   border-radius: 4px;
   text-transform: uppercase;
-  color: #fff;
-  background: $main-accent url("../../assets/images/icons/upload.svg") 0.5rem no-repeat;
+  color: $white;
+  background: $bf-blue url("../../assets/images/icons/upload.svg") 0.5rem no-repeat;
   background-size: 1.3rem;
   cursor: pointer;
   vertical-align: middle;
   font-weight: 600;
 
   @include tablet {
-    width: 150px;
+    width: 155px;
     padding: 0 2rem;
     background-size: 1.4rem;
     height: 2.5rem;
   }
 
   &:hover {
-    background-color: $sec-accent;
-    border: 1px solid $sec-accent;
+    background-color: $bf-dk-blue;
+    border: 1px solid $bf-dk-blue;
   }
 }
