--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -9,7 +9,7 @@
 :root {
   font-size: $fs-root;
   color: $bf-black;
-  font-family: "Avenir", sans-serif;
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
   background-color: $white;
 }
 
