--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -14,29 +14,21 @@
   }
 
   @include desktop {
-    padding: 0 7.75rem;
+    padding: 0;
+    padding-left: 7.75rem;
   }
 
+  &__count {
+    font-size: 0.75rem;
+  }
   &__container {
     width: 100%;
 
     @include desktop {
-      width: 50%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       margin: 0 auto;
-    }
-  }
-
-  &__title {
-    font-size: 1rem;
-    font-weight: 600;
-    margin: 0.75rem 0 0.5rem 0;
-
-    @include tablet {
-      font-size: 1rem;
-      margin: 2.5rem 0 1.75rem 0;
     }
   }
 
@@ -66,14 +58,18 @@
   }
 
   &__label {
-    color: $bf-dk-black;
-    font-weight: 300;
+    display: flex;
+    justify-content: space-between;
+    color: $mercury;
+    font-weight: 600;
     text-transform: uppercase;
-    font-size: 0.65rem;
-    padding: 0.5rem 0;
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
 
     @include tablet {
       font-size: 0.8rem;
+      margin: 0;
+      margin-bottom: 0.5rem;
     }
   }
 
@@ -82,7 +78,7 @@
     justify-content: center;
 
     @include tablet {
-      margin: 0 5rem;
+      margin: 0;
     }
 
     @include desktop {
@@ -90,67 +86,29 @@
       margin-right: auto;
       width: 100%;
     }
-  }
 
-  &__form-details {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    @include tablet {
-      width: 85%;
-    }
-
-    @include desktop {
-      width: 90%;
-    }
-  }
-
-  &__input {
-    border: 1px solid $mercury;
-    border-radius: 4px;
-    width: 100%;
-    height: 2.5rem;
-    line-height: 2rem;
-    padding: 0.75rem;
-    margin-bottom: 0.75rem;
-    background-color: $alabaster;
-    color: $bf-black;
-    font-size: 0.8rem;
-    font-family: "Avenir", sans-serif;
-    font-weight: 300;
-
-    @include tablet {
-      height: 3rem;
-      font-size: 1rem;
-      padding: 1rem;
-    }
-
-    @include desktop {
-      font-size: 0.8rem;
-    }
-
-    &:focus {
-      outline: 1px solid transparent;
-      border: 1px solid $bf-blue;
-    }
-
-    &:active {
-      border: 1px solid $bf-dk-black;
-    }
-
-    &::placeholder {
-      color: $bf-dk-black;
-      font-family: "Avenir", sans-serif;
-      font-weight: 300;
-      font-size: 0.8rem;
+    &-input-wrapper {
+      display: flex;
+      flex-direction: column;
 
       @include tablet {
-        font-size: 1rem;
+        width: 100%;
+        margin: 0;
+        margin-bottom: 1.5rem;
+      }
+    }
+
+    &-details {
+      display: flex;
+      flex-direction: column;
+
+      @include tablet {
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
       }
 
       @include desktop {
-        font-size: 0.8rem;
       }
     }
   }
@@ -165,18 +123,18 @@
     padding-left: 0.75rem;
     margin-bottom: 0.75rem;
     color: $bf-black;
-    font-family: "Avenir", sans-serif;
+    font-family: "Avenir";
     font-weight: 300;
     font-size: 0.8rem;
     color: $bf-dk-black;
 
     @include tablet {
-      height: 5rem;
+      height: 2.75rem;
       font-size: 1rem;
+      margin-bottom: 0;
     }
 
     @include desktop {
-      height: 6rem;
       font-size: 0.8rem;
     }
 
@@ -190,7 +148,7 @@
     }
 
     &::placeholder {
-      color: $mercury;
+      color: $bf-black;
       font-family: "Avenir";
       font-weight: 300;
       font-size: 0.8rem;
@@ -205,15 +163,13 @@
     }
   }
 
-  &__group {
+  &__group--form {
     display: flex;
-    width: 100%;
     border-bottom: 1px solid $mercury;
+    width: 100%;
 
-    &--form {
-      display: flex;
-      border-bottom: 1px solid $mercury;
-      width: 100%;
+    @include tablet {
+      justify-content: space-between;
     }
   }
 
@@ -244,115 +200,7 @@
       @include tablet {
         width: 3rem;
         height: 3rem;
-      }
-    }
-  }
-
-  &__name-date-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__name {
-    font-weight: 600;
-    margin: 1rem 0;
-    font-size: 0.85rem;
-
-    @include tablet {
-      margin-right: 0.625rem;
-    }
-  }
-
-  &__date {
-    color: $mercury;
-    font-size: 0.8rem;
-    margin: 1rem 0;
-  }
-
-  &__text {
-    padding: 0;
-    margin: 0;
-
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-
-    @include desktop {
-      margin-bottom: 1.5rem;
-    }
-  }
-
-  &__like-delete-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: last-baseline;
-    padding-bottom: 0;
-  }
-
-  &__like-container {
-    display: flex;
-    width: 2rem;
-    justify-content: space-between;
-  }
-
-  &__like-count {
-    font-size: 0.8rem;
-  }
-
-  &__like-image {
-    font-size: 1rem;
-  }
-
-  &__card {
-    width: 94%;
-
-    @include tablet {
-      width: 100%;
-    }
-
-    @include desktop {
-      width: 100%;
-    }
-  }
-
-  &__button {
-    height: 2.6rem;
-    background-color: $bf-blue;
-    color: $white;
-    font-weight: 600;
-    font-size: 1rem;
-    border-radius: 4px;
-    width: 100%;
-    border: none;
-    margin-bottom: 1rem;
-
-    @include tablet {
-      width: 10rem;
-      font-size: 1rem;
-      padding-left: 2rem;
-      padding-right: 2rem;
-      font-weight: 300;
-      margin-top: 1rem;
-    }
-
-    @include desktop {
-      width: 30%;
-      font-size: 0.9rem;
-      margin-bottom: 1.5rem;
-    }
-
-    &:hover {
-      background-color: $bf-dk-blue;
-      cursor: pointer;
-      transition: 0.7s;
-    }
-
-    &-container {
-      width: 100%;
-
-      @include tablet {
-        display: flex;
-        justify-content: flex-end;
+        margin-top: 1.5rem;
       }
     }
   }
