--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -1,4 +1,43 @@
-.video__container {
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/typography" as *;
+
+.hero-video {
     width: 100%;
-    height: auto;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+
+    @include tablet {
+
+    }
+    @include desktop {
+      height: 65vh;
+      max-width: 968px;
+      margin: 0 auto;
+    }
+
+  &__container {
+    background-color: $bf-dk-black;
+    width: 100%;
+    height: 45vh;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 56.25%;
+    position: relative;
+
+  
+    @include tablet {
+      height: 70vh;
+      padding-left: 2.25rem;
+      padding-right: 2.25rem;
+      max-width: 968px;
+      margin: 0 auto;
+    }
+    @include desktop {
+      height: 65vh;
+    }
+  }
 }
