--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -79,6 +79,7 @@
 
     @include tablet {
       margin: 0;
+      width: 100%;
     }
 
     @include desktop {
@@ -170,6 +171,7 @@
 
     @include tablet {
       justify-content: space-between;
+
     }
   }
 
