--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,14 @@
 @use "../../styles/partials/typography" as *;
 
 .header {
-  
+  height: 50vw;
+  max-height: 160px;
+  margin-bottom: 1rem;
+
+  @include tablet {
+    height: 60px;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
