--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -102,6 +102,7 @@
     &-details {
       display: flex;
       flex-direction: column;
+      width: 100%;
 
       @include tablet {
         flex-direction: row;
@@ -130,7 +131,7 @@
     color: $bf-dk-black;
 
     @include tablet {
-      height: 2.75rem;
+      height: 2.6rem;
       font-size: 1rem;
       margin-bottom: 0;
     }
@@ -168,9 +169,11 @@
     display: flex;
     border-bottom: 1px solid $mercury;
     width: 100%;
+    padding-bottom: 1rem;
 
     @include tablet {
       justify-content: space-between;
+      padding-bottom: 0;
 
     }
   }
