--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -21,61 +21,20 @@
   &__count {
     font-size: 0.75rem;
   }
+
   &__container {
     width: 100%;
 
     @include desktop {
-      display: flex;
+      @include flexbox();
       flex-direction: column;
-      justify-content: center;
       margin: 0 auto;
     }
-  }
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    @include tablet {
-      margin-left: 5rem;
-      margin-right: 5rem;
-    }
-
-    @include desktop {
-      margin-left: 0;
-      margin-right: 0;
-    }
-  }
-}
-
-.comment {
-  display: flex;
-  justify-content: space-between;
-
-  &__container {
-    width: 100%;
-  }
-
-  &__label {
-    display: flex;
-    justify-content: space-between;
-    color: $mercury;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    margin-bottom: 0.5rem;
-
-    @include tablet {
-      font-size: 0.8rem;
-      margin: 0;
-      margin-bottom: 0.5rem;
-    }
   }
 
   &__form {
-    display: flex;
-    justify-content: center;
+    @include flexbox();
 
     @include tablet {
       margin: 0;
@@ -86,17 +45,6 @@
       margin-left: auto;
       margin-right: auto;
       width: 100%;
-    }
-
-    &-input-wrapper {
-      display: flex;
-      flex-direction: column;
-
-      @include tablet {
-        width: 100%;
-        margin: 0;
-        margin-bottom: 1.5rem;
-      }
     }
 
     &-details {
@@ -112,6 +60,56 @@
 
       @include desktop {
       }
+    }
+
+    &-input-wrapper {
+      display: flex;
+      flex-direction: column;
+
+      @include tablet {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+  &__group--form {
+    display: flex;
+    border-bottom: 1px solid $mercury;
+    width: 100%;
+    padding-bottom: 1rem;
+
+    @include tablet {
+      justify-content: space-between;
+      padding-bottom: 0;
+    }
+  }
+
+  &__photo--form {
+    @include profile-photo;
+    margin-top: 2rem;
+
+    @include tablet {
+      width: 3rem;
+      height: 3rem;
+      margin-top: 1.5rem;
+    }
+  }
+
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    color: $mercury;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    margin-bottom: 0.5rem;
+
+    @include tablet {
+      font-size: 0.8rem;
+      margin: 0;
+      margin-bottom: 0.5rem;
     }
   }
 
@@ -165,48 +163,18 @@
     }
   }
 
-  &__group--form {
+  &__list {
     display: flex;
-    border-bottom: 1px solid $mercury;
-    width: 100%;
-    padding-bottom: 1rem;
+    flex-direction: column;
 
     @include tablet {
-      justify-content: space-between;
-      padding-bottom: 0;
 
-    }
-  }
-
-  &__photo {
-    margin-top: 1rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-    width: 2.25rem;
-    height: 2.25rem;
-    border-bottom: 1px solid $mercury;
-    object-fit: cover;
-    background-color: $mercury;
-
-    @include tablet {
-      width: 3rem;
-      height: 3rem;
+      
     }
 
-    &--form {
-      margin-top: 2rem;
-      border-radius: 50%;
-      margin-right: 1rem;
-      width: 2.25rem;
-      height: 2.25rem;
-      object-fit: cover;
-      background-color: $mercury;
-
-      @include tablet {
-        width: 3rem;
-        height: 3rem;
-        margin-top: 1.5rem;
-      }
+    @include desktop {
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
