--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,5 +1,5 @@
-$tablet-breakpoint: 48rem;
-$desktop-breakpoint: 80rem;
+@use "../../styles/partials/variables" as *;
+
 
 @mixin tablet {
   @media screen and (min-width: $tablet-breakpoint) {
@@ -11,4 +11,18 @@ $desktop-breakpoint: 80rem;
   @media screen and (min-width: $desktop-breakpoint) {
     @content;
   }
+}
+
+@mixin profile-photo {
+  border-radius: 50%;
+  margin-right: 1rem;
+  width: 2.25rem;
+  height: 2.25rem;
+  object-fit: cover;
+  background-color: $mercury;
+}
+
+@mixin flexbox ($justify: center) {
+  display: flex;
+  justify-content: $justify;
 }
