--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,20 @@
 @use "./styles/partials/_globals.scss" as *;
+@use "./styles/partials/variables" as *;
+@use "./styles/partials/mixins" as *;
+@use "./styles/partials/typography" as *;
+
+.main__contents {
+  display: flex;
+  flex-direction: column;
+
+  @include desktop {
+    flex-direction: row;
+  }
+}
+
+.desc-comments__container {
+  @include desktop {
+    width: 65%;
+    border-right: 1px solid $mercury;
+  }
+}
