--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -5,6 +5,7 @@
 .hero-video {
     width: 100%;
     height: auto;
+    aspect-ratio: 16/9;
 
     @include tablet {
         
@@ -21,13 +22,11 @@
     justify-content: center;
     align-items: center;
 
-
-
-  
     @include tablet {
       padding-left: 2.25rem;
       padding-right: 2.25rem;
     }
+
     @include desktop {
         padding-left: 7.75rem;
         padding-right: 7.75rem;
