--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -5,6 +5,15 @@
 .video-list {
   display: flex;
   flex-direction: column;
+  padding-left: 1rem;
+
+  @include tablet {
+    padding-left: 2.25rem;
+  }
+
+  @include desktop {
+    padding-left: 1rem;
+  }
 
   &__container {
     display: flex;
@@ -18,19 +27,21 @@
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
-    margin-bottom: 0.5rem;
+    margin-left: 1rem;
+
 
     @include tablet {
       font-size: 0.8rem;
       margin: 0;
-      margin-bottom: 1rem;
-      margin-left: 2.25rem;
+
       margin-top: 1.5rem;
+      margin-left: 2.25rem;
     }
 
     @include desktop {
-      margin-bottom: 0.5rem;;
+      margin: 0;
       margin-top: 2rem;
+      margin-left: 1rem;
     }
   }
 }
