adds utils file with time conversion, additional scss styling, cleans up px, fixes hero video styling to reflect 16:9 ratio

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: space-between;
 
+  &__container {
+    width: 100%;
+  }
+  
   &__card {
     width: 94%;
 
@@ -64,12 +68,6 @@
 
     @include desktop {
       margin-bottom: 1.5rem;
-    }
-
-    :last-child {
-      border-bottom: none;
-      padding-bottom: 3rem;
-      background-color: pink;
     }
   }
 }
