--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -5,7 +5,7 @@
 .hero-video {
   aspect-ratio: 16 / 9;
   width: 100%;
-  max-width: 968px;
+  max-width: 60.5rem;
   height: auto;
 
   &__container {
