--- a/src/components/Video/video.scss
+++ b/src/components/Video/video.scss
@@ -5,7 +5,7 @@
 .video {
   display: flex;
   flex-direction: column;
-  background-color: $white;
+  background-color: $mercury;
 
   &__item {
     list-style-type: none;
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 170px;
+    width: 10.625rem;
   }
 
   &__title {
