--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -3,15 +3,16 @@
 @use "../../styles/partials/typography" as *;
 
 .hero-video {
-  aspect-ratio: 16 / 9;
   width: 100%;
   max-width: 60.5rem;
   height: auto;
+  object-fit: cover;
 
   &__container {
     display: flex;
     justify-content: center;
     background-color: $bf-black;
+    aspect-ratio: 16 / 9;
 
     @include tablet {
       padding-left: 2.25rem;
