--- a/src/components/VideoDesc/VideoDesc.scss
+++ b/src/components/VideoDesc/VideoDesc.scss
@@ -3,7 +3,6 @@
 @use "../../styles/partials/typography" as *;
 
 .video-desc {
-  
   &__description {
     font-weight: 400;
     font-size: 0.7rem;
@@ -26,23 +25,22 @@
     padding: 1rem;
 
     @include tablet {
-        padding: 2.25rem;
+      padding: 2.25rem;
     }
 
     @include desktop {
-        padding-left: 7.75rem;
-        padding-right: 0;
+      padding-left: 7.75rem;
+      padding-right: 0;
     }
   }
 
   &__title-stats-container {
     display: flex;
     flex-direction: column;
-
   }
 
   &__title {
-    margin:0;
+    margin: 0;
     padding: 0;
     font-size: 1.5rem;
     color: $bf-black;
@@ -50,11 +48,10 @@
     line-height: 2.25rem;
 
     @include tablet {
-        font-size: 2.25rem;
-        margin: 0;
-        margin-bottom: 0.5rem;
+      font-size: 2.25rem;
+      margin: 0;
+      margin-bottom: 0.5rem;
     }
-
   }
 
   &__stats {
@@ -66,9 +63,9 @@
     border-bottom: 1px solid $mercury;
 
     @include tablet {
-        padding-left: 0;
-        padding-right: 0;
-        border-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+      border-top: 0;
     }
   }
 
@@ -77,9 +74,9 @@
     flex-direction: column;
 
     @include tablet {
-        flex-direction: row;
-        justify-content: space-between;
-        width: 11.25rem;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 13rem;
     }
   }
 
@@ -96,15 +93,15 @@
   &__views-likes-container {
     display: flex;
     flex-direction: column;
- 
+
     @include tablet {
-        flex-direction: row;
-        justify-content: space-between;
-        width: 11.25rem;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 11.25rem;
     }
 
     @include desktop {
-      padding-right: 1.5rem;;
+      padding-right: 1.5rem;
       margin-right: 0;
       width: 12.5rem;
     }
@@ -113,7 +110,6 @@
   &__views-container {
     display: flex;
     align-items: center;
-
   }
 
   &__views-icon {
@@ -145,5 +141,4 @@
     color: $mercury;
     font-size: 0.8rem;
   }
-
 }
