--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -3,77 +3,30 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.button--upload {
-  width: 100%;
-  height: 2.5rem;
-  padding: 0.3rem 0.75rem;
-  border: 1px solid $bf-blue;
-  border-radius: 4px;
-  text-transform: uppercase;
-  color: $white;
-  background: $bf-blue url("../../assets/images/icons/upload.svg") 0.5rem
-    no-repeat;
-  background-size: 1.3rem;
-  cursor: pointer;
-  vertical-align: middle;
-  font-weight: 600;
+.button {
 
-  @include tablet {
-    width: 150px;
-    padding: 0 2rem;
-    background-size: 1.4rem;
-    height: 2.5rem;
+  &--upload {
+  @include button();
+    background-image: url("../../assets/images/icons/upload.svg")
   }
 
-  &:hover {
-    background-color: $bf-dk-blue;
-    border: 1px solid $bf-dk-blue;
-  }
-}
+  &--submit {
+    @include button();
+    background-image: url("../../assets/images/icons/add_comment.svg");
+    
+    &-container {
 
-.button--submit {
-  width: 100%;
-  height: 2.5rem;
-  padding: 0.3rem 0.75rem;
-  border: 1px solid $bf-blue;
-  border-radius: 4px;
-  text-transform: uppercase;
-  color: $white;
-  background: $bf-blue url("../../assets/images/icons/add_comment.svg") 0.5rem
-    no-repeat;
-  background-size: 1.3rem;
-  cursor: pointer;
-  vertical-align: middle;
-  font-weight: 600;
-
-  @include tablet {
-    width: 10rem;
-    font-size: 0.8rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-left: 1.5rem;
-
-  }
-
-  @include desktop {
-    margin-right: 1rem;
-
-  }
-
-  &:hover {
-    background-color: $bf-dk-blue;
-    cursor: pointer;
-    transition: 0.7s;
-  }
-
-  &-container {
-    width: 100%;
-
-    @include tablet {
-      width: 35%;
-      display: flex;
-      justify-content: space-between;
-      margin-left: 1.5rem;
+      @include tablet {
+        width: 35%;
+        display: flex;
+        justify-content: space-between;
+        margin-left: 1.5rem;
+      }
     }
   }
+  &--publish {
+    @include button();
+    background-image: url("../../assets/images/icons/publish.svg");
+  }
+
 }
