--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -26,3 +26,32 @@
   display: flex;
   justify-content: $justify;
 }
+
+@mixin button {
+  width: 100%;
+  height: 2.5rem;
+  padding: 0.3rem 0.75rem;
+  border: 1px solid $bf-blue;
+  border-radius: 4px;
+  text-transform: uppercase;
+  color: $white;
+  background-color: $bf-blue ;
+  background-position: 0.5rem;
+  background-repeat: no-repeat;
+  background-size: 1.3rem;
+  cursor: pointer;
+  vertical-align: middle;
+  font-weight: 600;
+
+  @include tablet {
+    width: 150px;
+    padding: 0 2rem;
+    background-size: 1.4rem;
+    height: 2.5rem;
+  }
+
+  &:hover {
+    background-color: $bf-dk-blue;
+    border: 1px solid $bf-dk-blue;
+  }
+}
