--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -58,6 +58,7 @@
       }
 
       @include desktop {
+        margin-right: 1.5rem;
       }
     }
 
@@ -69,6 +70,7 @@
         width: 100%;
         margin: 0;
         margin-bottom: 1.5rem;
+        margin-right: 1.5rem;
       }
     }
   }
@@ -91,6 +93,10 @@
 
     @include tablet {
       margin-top: 1.5rem;
+    }
+
+    @include desktop {
+      margin-right: 2rem;
     }
   }
 
@@ -176,6 +182,10 @@
       margin-left: 0;
       margin-right: 0;
     }
+  }
+
+  &__ul {
+    padding-left: 0;
   }
 }
 
