--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -4,15 +4,18 @@
 
 .hero-video {
   width: 100%;
-  max-width: 60.5rem;
-  height: auto;
+  max-width: 968px;
+  height: 100%;
+  max-height: 700px;
   object-fit: cover;
+  aspect-ratio: 16 / 9;
 
   &__container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding-bottom: 0;
     background-color: $bf-black;
-    aspect-ratio: 16 / 9;
 
     @include tablet {
       padding-left: 2.25rem;
