--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -12,7 +12,7 @@
   }
 
   @include desktop {
-    padding-left: 1rem;
+    padding-left: 1.5rem;
   }
 
   &__container {
@@ -27,21 +27,22 @@
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
+    margin: 0;
+    margin-bottom: 0.25rem;
     margin-left: 1rem;
+
 
 
     @include tablet {
       font-size: 0.8rem;
-      margin: 0;
-
-      margin-top: 1.5rem;
+      margin: 0.5rem 0;
       margin-left: 2.25rem;
     }
 
     @include desktop {
       margin: 0;
       margin-top: 2rem;
-      margin-left: 1rem;
+      margin-left: 1.5rem;
     }
   }
 }
