--- a/src/pages/Error404Page/Error404Page.scss
+++ b/src/pages/Error404Page/Error404Page.scss
@@ -1,7 +1,52 @@
+@use "../../styles/partials/_variables.scss" as *;
+@use "../../styles/partials/_mixins.scss" as *;
+@use "../../styles/partials/_typography.scss" as *;
+
 .error {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 0;
+    width: 100%;
+  
+    @include tablet {
+      padding: 0 2.25rem;
+      margin-right: 2.25rem;
+    }
+  
+    @include desktop {
+      padding: 0;
+      padding-left: 7.75rem;
+    }
+
     &__container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        width: 100%;
+        padding: 0 1rem;
+
+        @include tablet {
+            padding: 0 2.25rem;
+        }
+    
+        @include desktop {
+          @include flexbox();
+          flex-direction: column;
+          padding: 0 auto;
+        }
+      }
+  
+    &__heading {
+      padding-top: 1.5rem;
+      margin-top: 0;
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid $mercury;
+      border-top: 1px solid $mercury;
+  
+      @include tablet {
+        padding-top: 2.25rem;
+        padding-bottom: 1.5rem;
+        margin: 0;
+        margin-bottom: 1.5rem;
+        border-bottom: 1px solid $mercury;
+        border-top: 1px solid $mercury;
+      }
     }
 }
