--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -12,9 +12,11 @@
 
 @font-face {
   font-family: "Avenir";
-  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Demi.otf") format("otf"),
+  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Demi.otf")
+      format("otf"),
     url("../../assets/fonts/Avenir-ttf/AvenirNextLTProDemi.ttf") format("ttf"),
-    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Demi.woff") format("woff"),
+    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Demi.woff")
+      format("woff"),
     url("../../assets/fonts/Avenir-woff2/AvenirNextLTPro-Demi.woff2")
       format("woff2");
   font-weight: 600;
@@ -22,9 +24,11 @@
 
 @font-face {
   font-family: "Avenir";
-  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Bold.otf") format("otf"),
+  src: url("../../assets/fonts/Avenir-otf/AvenirNextLTPro-Bold.otf")
+      format("otf"),
     url("../../assets/fonts/Avenir-ttf/AvenirNextLTProBold.ttf") format("ttf"),
-    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Bold.woff") format("woff"),
+    url("../../assets/fonts/Avenir-woff/AvenirNextLTPro-Bold.woff")
+      format("woff"),
     url("../../assets/fonts/Avenir-woff2/AvenirNextLTPro-Bold.woff2")
       format("woff2");
   font-weight: 700;
