--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,11 +4,11 @@
 
 .header {
   height: 50vw;
-  max-height: 160px;
+  max-height: 10rem;
   margin-bottom: 1rem;
 
   @include tablet {
-    height: 60px;
+    height: 3.75rem;
   }
 
   &__container {
@@ -23,7 +23,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      height: 75px;
+      height: 4.6875rem;
       padding-left: 2.25rem;
       padding-right: 2.25rem;
     }
@@ -36,7 +36,7 @@
 
   &__logo {
     margin-bottom: 1rem;
-    max-height: 25px;
+    max-height: 1.5625rem;
 
     @include tablet {
       margin: 0;
