--- a/src/components/HeroVideo/HeroVideo.scss
+++ b/src/components/HeroVideo/HeroVideo.scss
@@ -4,9 +4,9 @@
 
 .hero-video {
   width: 100%;
-  max-width: 968px;
+  max-width: 60.5rem;
   height: 100%;
-  max-height: 700px;
+  max-height: 43.75rem;
   object-fit: cover;
   aspect-ratio: 16 / 9;
 
