--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -23,7 +23,7 @@
   &__title {
     display: flex;
     justify-content: space-between;
-    color: $mercury;
+    color: $silver;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
