--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -103,7 +103,7 @@
   &__label {
     display: flex;
     justify-content: space-between;
-    color: $mercury;
+    color: $silver;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
