--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -72,7 +72,7 @@
   &__label {
     display: flex;
     justify-content: space-between;
-    color: $mercury;
+    color: $silver;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.8rem;
